Add switch for local and pipeline build.

--- a/build.gradle
+++ b/build.gradle
@@ -41,4 +41,6 @@ subprojects {
 }
 
 evaluationDependsOnChildren()
-project(":language-server").tasks.generateSysMLv2LanguageServer.dependsOn project(":language").tasks.grammarsJar
+if(("true").equals(getProperty('isPipelineFullBuild'))){
+  project(":language-server").tasks.generateSysMLv2LanguageServer.dependsOn project(":language").tasks.grammarsJar
+}
