--- a/settings.gradle
+++ b/settings.gradle
@@ -20,11 +20,13 @@ include 'cc'
 // The MontiCore-based language implementation of textual SysML v2
 include 'language'
 
-// MontiCore-Language-Server-Generator-based language server imlementation
-include 'language-server'
+if(("true").equals(getProperty('isPipelineFullBuild'))) {
+  // MontiCore-Language-Server-Generator-based language server imlementation
+  include 'language-server'
 
-// Wrapper for the Github-publication of the official vizualizer
-include 'visualization'
+  // Wrapper for the Github-publication of the official vizualizer
+  include 'visualization'
+}
 
 // Visualization-Plugin for VSCode
 include 'visualization-plugin'
