--- a/build.gradle
+++ b/build.gradle
@@ -42,5 +42,6 @@ subprojects {
 
 evaluationDependsOnChildren()
 if(("true").equals(getProperty('isPipelineFullBuild'))){
-  project(":language-server").tasks.generateSysMLv2LanguageServer.dependsOn project(":language").tasks.grammarsJar
+  project(":language-server").tasks.generateSysMLv2LanguageServer.dependsOn project(":cc").tasks.grammarsJar,
+      project(':cc').tasks.jar, project(":language").tasks.grammarsJar, project(':language').tasks.jar
 }
