--- a/cc/build.gradle
+++ b/cc/build.gradle
@@ -6,7 +6,7 @@
 
 plugins {
   id "de.monticore.generator" version "$mc_version"
-  id "io.github.themrmilchmann.ecj" version "0.2.0" apply(false)
+  id "io.github.themrmilchmann.ecj" version "0.2.0"
 }
 
 /* ============================================================ */
@@ -55,6 +55,11 @@ tasks.withType(JavaCompile) {
   options.deprecation false
   options.warnings = false
   options.headerOutputDirectory.convention(null)
+}
+
+// configure ecj for compatibility with Java 21
+ecj {
+  compilerVersion = "3.43.0"
 }
 
 java {
