--- a/language/build.gradle
+++ b/language/build.gradle
@@ -7,7 +7,7 @@
 plugins {
   id "de.monticore.generator" version "$mc_version"
   id "com.github.johnrengelman.shadow" version "7.0.0"
-  id "io.github.themrmilchmann.ecj" version "0.2.0" apply(false)
+  id "io.github.themrmilchmann.ecj" version "0.2.0"
 }
 
 /* ============================================================ */
@@ -67,6 +67,11 @@ tasks.withType(JavaCompile) {
   options.deprecation false
   options.warnings = false
   options.headerOutputDirectory.convention(null)
+}
+
+// configure ecj for compatibility with Java 21
+ecj {
+  compilerVersion = "3.43.0"
 }
 
 // all in one cli-jar
